# paris-events-analyzer

./: .env  .gitignore  .pre-commit-config-4.yaml  .pre-commit-config.yaml  .sqlfluff  LICENSE  README.md  app.py  docker-compose.yml  justfile  pyproject.toml
.github/: labeler.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: labeler.yml  mission-1.yml  mission-2.yml  mission-3.yml  mission-4.yml  mission-5.yml
datalake/.minio.sys/: format.json
datalake/.minio.sys/tmp/.trash/084da1fa-edb7-42d9-97ff-418738fb2522/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1d4b6262-5ae5-4eca-b52e-1941a9f7bf7b/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1e277587-c1f2-4386-bb50-bf4b713c636c/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/2061310a-798d-419d-aa2c-e4fe52c5e568/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/2692a0c6-d3e1-4940-b033-abaa8770f461/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/26d56fbe-6adc-492d-8541-4cddeb9ab134/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/388a8772-1330-44f8-8ddf-e23cf5067afd/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/398285f5-03c5-49e4-9dd9-78670b242f4d/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/40887997-33fa-4cb4-992d-eec7e15981de/: xl.meta.bkp
datalake/parquet/2025-06-26_data.parquet/4dabd170-322a-4e5d-940e-20b8898e7109/: part.1
datalake/parquet/2025-06-26_data.parquet/f9b539fd-4f35-4ab2-a0fd-4f1f922a3427/: part.1
src/exposition/: main.py  utils.py
src/ingestion/: get_file.py  main.py  write_to_storage.py
src/logger/: log_handler.py
src/transformation/dbt_paris_event_analyzer/profiles/: profiles.yml
(+29 files in other folders)
