[project]
name = "paris-events-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.8.3",
    "deptry>=0.23.0",
    "dotenv>=0.9.9",
    "minio>=7.2.15",
    "requests-cache>=1.2.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "pre-commit>=4.2.0",
    "rust-just>=1.40.0",
]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version = "0.1.1"
update_changelog_on_bump = true
bump_message = "release $current_version → $new_version [skip-ci]"
# pyproject.toml
[tool.deptry]
# Liste des dépendances à ignorer lors de la vérification.
# On ignore les outils en ligne de commande qui ne sont pas importés dans le code.
exclude = ["commitizen", "duckdb", "deptry"]
extend_exclude = ['.venv', '.git']